--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -112,7 +112,9 @@
         </div>
         <button type="submit">Sign In</button>
         <div class="forget-pass">
-            <a href="{% url 'password_reset' %}">Forgot Password</a>
+            <a href="{% url 'password_reset' %}">Forgot Password</a><br>
+
+            Click here to<a href="{% url 'registration' %}"> Register</a>
 
         </div>
 
