--- a/DairyProject/templates/seller_list.html
+++ b/DairyProject/templates/seller_list.html
@@ -42,9 +42,11 @@
     <header>
         <h1>Seller List</h1>
     </header>
+    
     <div class="seller-list">
         <ul>
             {% for seller in sellers %}
+
             <li>
                 <p>Name: {{ seller.firstname }} {{ seller.lastname }}</p>
                 <p>Email: {{ seller.email }}</p>
@@ -55,11 +57,15 @@
                 <a href="{% url 'update_s' seller.id %}">Update</a>
                 <a href="{% url 'delete_s' seller.id %}">Delete</a>
             </li>
-            
+
             {% empty %}
                 <p class="no-sellers">No sellers found.</p>
             {% endfor %}
         </ul>
+
     </div>
+
 </body>
+<a href="{% url 'add_seller'  %}">Add Seller</a>
+
 </html>
