--- a/DairyProject/templates/inc/navbar.html
+++ b/DairyProject/templates/inc/navbar.html
@@ -17,7 +17,7 @@
             <!--a href="{% url 'login' %}" class="nav-item nav-link">Login</a-->
 
             <a href="{% static '/service.html' %}" class="nav-item nav-link">Products</a>
-            <!--a href="{% url 'registration' %}" class="nav-item nav-link">Registration</a-->
+            <!--a href="{% url 'c_register' %}" class="nav-item nav-link">Registration</a-->
 
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Todays Rate</a>
