--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -84,7 +84,7 @@
                                     <p class="fs-4 text-darkblue">Welcome to our dairy farm</p>
                                     <h1 class="display-1 text-darkblue mb-5 animated ">The Farm of Dairy products</h1>
                                     <a href="{% url 'login' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">Login</a>
-                                    <a href="{% url 'registration' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">Register</a>
+                                    <a href="{% url 'c_register' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">SignUp</a>
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                                     <p class="fs-4 text-darkblue">Welcome to our dairy farm</p>
                                     <h1 class="display-1 text-darkblue mb-5 animated ">Best Organic Dairy Products</h1>
                                     <a href="{% url 'login' %}" class="btn btn-secondary rounded-pill py-3 px-5 ">Login</a>
-                                    <a href="{% url 'registration' %}" class="btn btn-secondary rounded-pill py-3 px-5 ">Register</a>
+                                    <a href="{% url 'c_register' %}" class="btn btn-secondary rounded-pill py-3 px-5 ">Register</a>
                                 </div>
                             </div>
                         </div>
