--- a/DairyProject/templates/login.html
+++ b/DairyProject/templates/login.html
@@ -112,14 +112,17 @@ input[type="password"] {
 
         </div>
         </form>
-        
-        {% if messages %}
-        <div class="alert alert-danger">
-            {% for message in messages %}
-                {{ message }}
-            {% endfor %}
+        <div id="alert" style="display: none;">
+            {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
-        {% endif %}
-<script>
-</script>
+        
+<!--script>
+    
+</script-->
 {% endblock body %}
